--- a/css/screen.css
+++ b/css/screen.css
@@ -1,27 +1,31 @@
 @font-face {
   font-family: 'Pluto Sans Cond Light';
-  src: url("/fonts/pluto-sans.eot");
-  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype");
+  src: url('/fonts/pluto-sans.eot');
+  src: url('/fonts/pluto-sans.eot?#iefix') format('embedded-opentype'), url('/fonts/pluto-sans.woff') format('woff'), url('/fonts/pluto-sans.ttf') format('truetype');
   font-weight: normal;
   font-style: normal; }
+
 @font-face {
   font-family: 'Rooney Web';
-  src: url("/fonts/rooney-light.eot");
-  src: url("/fonts/rooney-light.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light.woff") format("woff"), url("/fonts/rooney-light.ttf") format("truetype");
+  src: url('/fonts/rooney-light.eot');
+  src: url('/fonts/rooney-light.eot?#iefix') format('embedded-opentype'), url('/fonts/rooney-light.woff') format('woff'), url('/fonts/rooney-light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal; }
+
 @font-face {
   font-family: 'Rooney Web Italic';
-  src: url("/fonts/rooney-light-italic.eot");
-  src: url("/fonts/rooney-light-italic.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light-italic.woff") format("woff"), url("/fonts/rooney-light-italic.ttf") format("truetype");
+  src: url('/fonts/rooney-light-italic.eot');
+  src: url('/fonts/rooney-light-italic.eot?#iefix') format('embedded-opentype'), url('/fonts/rooney-light-italic.woff') format('woff'), url('/fonts/rooney-light-italic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic; }
+
 @font-face {
   font-family: 'Rooney Web Bold';
-  src: url("/fonts/rooney-bold.eot");
-  src: url("/fonts/rooney-bold.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-bold.woff") format("woff"), url("/fonts/rooney-bold.ttf") format("truetype");
+  src: url('/fonts/rooney-bold.eot');
+  src: url('/fonts/rooney-bold.eot?#iefix') format('embedded-opentype'), url('/fonts/rooney-bold.woff') format('woff'), url('/fonts/rooney-bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal; }
+
 body {
   margin: 0;
   font-family: "Rooney Web", "Lora", Georgia, serif;
@@ -80,7 +84,7 @@ body {
   margin-top: -29px;
   display: block; }
   #earthbounded.left {
-    background-image: url("/images/index/sprite-left.png");
+    background-image: url('/images/index/sprite-left.png');
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -91,7 +95,7 @@ body {
     -ms-interpolation-mode: nearest-neighbor;
     /* IE (non-standard property) */ }
   #earthbounded.right {
-    background-image: url("/images/index/sprite-right.png");
+    background-image: url('/images/index/sprite-right.png');
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -102,7 +106,7 @@ body {
     -ms-interpolation-mode: nearest-neighbor;
     /* IE (non-standard property) */ }
   #earthbounded.walk {
-    background-image: url("/images/bysusanlin-earthbound.gif");
+    background-image: url('/images/bysusanlin-earthbound.gif');
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -117,12 +121,12 @@ body {
   width: 88px;
   height: 86px;
   position: fixed;
-  top: 50%;
+  top: 55%;
   left: 50%;
   margin-left: -44px;
   margin-top: -43px; }
   #ufo.flying {
-    background-image: url("/images/index/ufo.png");
+    background-image: url('/images/index/ufo.png');
     image-rendering: -moz-crisp-edges;
     /* Firefox */
     image-rendering: -o-crisp-edges;
@@ -164,7 +168,7 @@ header {
 nav {
   position: fixed;
   left: 25px;
-  top: 50%;
+  top: 53%;
   transform: translate(0, -56%);
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -173,7 +177,7 @@ nav {
     padding-left: 25px; }
 
 #onett {
-  background-image: url("/images/index/onett.png");
+  background-image: url('/images/index/onett.png');
   background-position: top center;
   height: 1730px;
   width: 100%;
@@ -187,7 +191,7 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #onett #trees {
-    background-image: url("/images/index/z-trees.png");
+    background-image: url('/images/index/z-trees.png');
     background-position: bottom center;
     height: 1730px;
     width: 100%;
@@ -203,7 +207,7 @@ nav {
     /* IE (non-standard property) */ }
 
 #saturn {
-  background-image: url("/images/index/saturn-valley.png");
+  background-image: url('/images/index/saturn-valley.png');
   background-position: center center;
   height: 2300px;
   width: 100%;
@@ -217,7 +221,7 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #saturn #valley {
-    background-image: url("/images/index/z-saturn.png");
+    background-image: url('/images/index/z-saturn.png');
     background-position: center center;
     height: 950px;
     width: 100%;
@@ -236,7 +240,7 @@ nav {
     width: 100%;
     position: absolute; }
     #saturn #distorter.phased1 {
-      background-image: url("/images/index/z-ufo1.png");
+      background-image: url('/images/index/z-ufo1.png');
       background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
@@ -248,7 +252,7 @@ nav {
       -ms-interpolation-mode: nearest-neighbor;
       /* IE (non-standard property) */ }
     #saturn #distorter.phased2 {
-      background-image: url("/images/index/z-ufo2.png");
+      background-image: url('/images/index/z-ufo2.png');
       background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
@@ -261,7 +265,7 @@ nav {
       /* IE (non-standard property) */ }
 
 #pinkcloud {
-  background-image: url("/images/index/sky.png");
+  background-image: url('/images/index/sky.png');
   background-position: center center;
   width: 100%;
   height: 1840px;
@@ -275,7 +279,7 @@ nav {
   -ms-interpolation-mode: nearest-neighbor;
   /* IE (non-standard property) */ }
   #pinkcloud #clouds {
-    background-image: url("/images/index/z-clouds.png");
+    background-image: url('/images/index/z-clouds.png');
     background-position: center center;
     height: 1840px;
     width: 100%;
@@ -293,7 +297,7 @@ nav {
 #moonside {
   width: 100%;
   height: 1434px;
-  background-image: url("/images/index/moonside.png");
+  background-image: url('/images/index/moonside.png');
   background-position: center center;
   image-rendering: -moz-crisp-edges;
   /* Firefox */
@@ -309,7 +313,7 @@ nav {
     width: 100%;
     position: absolute; }
     #moonside #ending.show {
-      background-image: url("/images/index/ending.png");
+      background-image: url('/images/index/ending.png');
       background-position: center center;
       image-rendering: -moz-crisp-edges;
       /* Firefox */
@@ -323,7 +327,7 @@ nav {
 
 .container {
   margin: 0 auto;
-  padding: 0 5% 0 25%;
+  padding: 0 5% 0 28%;
   max-width: 1370px;
   text-align: left; }
   .container div {
@@ -372,7 +376,7 @@ footer {
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
   footer ul {
     border-top: 1px dotted #dadee2;
-    padding: 30px 5% 15px 25%;
+    padding: 30px 5% 15px 28%;
     max-width: 1370px;
     margin: 0 auto; }
     footer ul li {
@@ -382,7 +386,7 @@ footer {
       width: 33.33%;
       height: 50px; }
   footer .footnote {
-    padding: 30px 5% 15px 25%;
+    padding: 30px 5% 15px 28%;
     max-width: 1370px;
     margin: 2em auto 0;
     font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
@@ -400,10 +404,6 @@ footer {
 
 .typeBluelight {
   color: #21dcc7 !important; }
-
-.typeNums {
-  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  font-size: 14px; }
 
 @media screen and (max-width: 990px) {
   nav {
@@ -432,9 +432,10 @@ footer {
     footer ul li {
       width: 100%; }
   footer .footnote {
-    padding: 30px 5% 15px; } }
+    padding: 30px 5% 15px; }
+ }
+
 @media screen and (max-width: 680px) {
   .home header {
-    min-height: 120px; } }
-
-/*# sourceMappingURL=screen.css.map */
+    min-height: 120px; }
+ }
